# Media-Analytics-Dashboard

./: .gitignore  DOCUMENTATION_COMPLETE.md  README.md  app.py  preprocessing.py  pyproject.toml  requirements.txt
assets/: custom_styles.css
data/processed/: clean_data.csv
src/: ai_prompts.py  ai_service.py  callbacks.py  data_processing.py  generate_dummy_data.py  layout.py  visualizations.py
